test/parsing/vass/wrong-escapes-1.good
wrong-escapes-1.chpl:3: syntax error: near 'DONE'
wrong-escapes-1.chpl:3: end-of-line in a string literal without a preceding backslash
wrong-escapes-1.chpl:3: EOF in string
